# Orbit

./: .gitignore  .gitmessage  CHANGELOG.md  README.md  docker-compose.star.yml  package-lock.json  package.json  tsconfig.json
.githooks/: commit-msg
.github/: dependabot.yml
docs/: codebase-index.md  commit-history-policy.md  orbit-api-contract.yaml  production-hardening.md  release-cut-runbook.md  release-policy.md
examples/: cell.routes.production.json  echo.http.spec.json  echo.spec.json  echo.worker.spec.json  embedded.high-throughput.config.json  embedded.low-noise.config.json  embedded.shared-host.config.json
scripts/: bootstrap-production-config.ts  commit-lint.mjs  perf-budget.ts
sdk/python/: README.md  orbit_cli.py  pyproject.toml
sdk/python/orbit_sdk/: __init__.py  client.py
sdk/python/tests/: test_client.py
src/: agent_ipc.ts  api_contract.ts  api_http.ts  call_protection.ts  cli.ts  config.ts  dlq.ts  echocore.ts  envelope.ts  errors.ts  index.ts  jetstream_durable.ts  json_schema.ts  logger.ts  metrics.ts  nats.ts  orbit_actions.ts  otel.ts  registry.ts  retry.ts  rpc_call.ts  service_adapter.ts  spec.ts  star.ts  subjects.ts  trace.ts  types.ts  util.ts  worker_pool.ts
tests/: api_contract.test.ts  api_http.test.ts  bridge.test.ts  call_protection.test.ts  cell.routing.test.ts  cell.template.test.ts  challenge.test.ts  dlq.test.ts  dlq_replay.test.ts  e2ee.test.ts  echo.bus.test.ts  echo.daemon.test.ts  envelope.test.ts  federation_policy.test.ts  integration.orbit.e2e.test.ts  jetstream_durable.test.ts  json_schema.test.ts  oauth.test.ts  (+4 more)
(+74 files in other folders)
