[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "Orbitai-CLI"
version = "0.1.4"
description = "Python SDK and CLI for Orbit API service"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.9"
dependencies = []
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://github.com/ahabscheid/orbit"
Documentation = "https://github.com/ahabscheid/orbit/tree/main/sdk/python"
Repository = "https://github.com/ahabscheid/orbit"

[project.scripts]
orbit-py = "orbit_cli:main"

[tool.setuptools]
packages = ["orbit_sdk"]
py-modules = ["orbit_cli"]
